finished libraries display